--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,13 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ovhWlZyIwAjTQ6xOM1iyYhvcW21H3hRk\n",
       "Sammamish latitude: 47.60553\n",
       "Sammamish longitude: -122.035555\n"
      ]
@@ -59,7 +60,9 @@
     "import pandas as pd\n",
     "import requests\n",
     "\n",
-    "long_lat_url = \"http://www.mapquestapi.com/geocoding/v1/address?key=ovhWlZyIwAjTQ6xOM1iyYhvcW21H3hRk&location=Sammamish\"\n",
+    "f = open(\"lat.txt\", 'r')\n",
+    "key = f.read()\n",
+    "long_lat_url = \"http://www.mapquestapi.com/geocoding/v1/address?key=\" + key + \"&location=Sammamish\"\n",
     "request_city = requests.get(long_lat_url)\n",
     "json_city_str = request_city.text\n",
     "json_city_obj = json.loads(json_city_str)\n",
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -98,16 +101,18 @@
     }
    ],
    "source": [
-    "    headers = {\"x-rapidapi-key\": \"1cea0346a9mshc6acdbf6ad24b3fp152fefjsnd37596d07273\"}\n",
-    "    url = \"https://meteostat.p.rapidapi.com/stations/nearby?lat=\" + str(latitude) + \"&lon=\" + str(longitude) + \"&limit=1\"\n",
-    "    request = requests.get(url = url, headers = headers)\n",
+    "f = open(\"Weather.txt\", 'r')\n",
+    "key = f.read()\n",
+    "headers = {\"x-rapidapi-key\": key}\n",
+    "url = \"https://meteostat.p.rapidapi.com/stations/nearby?lat=\" + str(latitude) + \"&lon=\" + str(longitude) + \"&limit=1\"\n",
+    "request = requests.get(url = url, headers = headers)\n",
     "\n",
-    "    json_station_str = request.text\n",
-    "    json_station_obj = json.loads(json_station_str)\n",
-    "    station_list = json_station_obj[\"data\"]\n",
-    "    station_dict = station_list[0]\n",
-    "    station_id = station_dict[\"id\"]\n",
-    "    print(\"Weather Station ID:\", station_id)"
+    "json_station_str = request.text\n",
+    "json_station_obj = json.loads(json_station_str)\n",
+    "station_list = json_station_obj[\"data\"]\n",
+    "station_dict = station_list[0]\n",
+    "station_id = station_dict[\"id\"]\n",
+    "print(\"Weather Station ID:\", station_id)"
    ]
   },
   {
@@ -119,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -145,16 +150,16 @@
     }
    ],
    "source": [
-    "    # get daily weather from station 2016-07-30 through 2022-04-09\n",
-    "    headers = {\"x-rapidapi-key\": \"1cea0346a9mshc6acdbf6ad24b3fp152fefjsnd37596d07273\"}\n",
-    "    weather_url = \"https://meteostat.p.rapidapi.com/stations/daily?station=\"+ station_id + \"&start=2016-07-30&end=2022-04-09\"\n",
-    "    request_weather = requests.get(url = weather_url, headers = headers)\n",
-    "    json_weather_str = request_weather.text\n",
-    "    json_weather_obj = json.loads(json_weather_str)\n",
-    "    weather_df = pd.DataFrame(json_weather_obj[\"data\"])\n",
-    "    weather_df.set_index(\"date\", inplace = True)\n",
-    "    weather_df.to_csv(\"daily_weather.csv\")\n",
-    "    print(weather_df)\n"
+    "# get daily weather from station 2016-07-30 through 2022-04-09\n",
+    "headers = {\"x-rapidapi-key\": key}\n",
+    "weather_url = \"https://meteostat.p.rapidapi.com/stations/daily?station=\"+ station_id + \"&start=2016-07-30&end=2022-04-09\"\n",
+    "request_weather = requests.get(url = weather_url, headers = headers)\n",
+    "json_weather_str = request_weather.text\n",
+    "json_weather_obj = json.loads(json_weather_str)\n",
+    "weather_df = pd.DataFrame(json_weather_obj[\"data\"])\n",
+    "weather_df.set_index(\"date\", inplace = True)\n",
+    "weather_df.to_csv(\"daily_weather.csv\")\n",
+    "print(weather_df)\n"
    ]
   },
   {
@@ -168,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
