--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,14 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ovhWlZyIwAjTQ6xOM1iyYhvcW21H3hRk\n",
       "Sammamish latitude: 47.60553\n",
       "Sammamish longitude: -122.035555\n"
      ]
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +198,7 @@
     }
    ],
    "source": [
-    "import datetime\n",
+    "\n",
     "date_df = pd.DataFrame()\n",
     "date_df[\"Date\"] = pd.Series(pd.date_range('2016-7-30', '2022-4-9', freq='D'))\n",
     "date_df[\"Day of Week\"] = date_df['Date'].dt.day_name()\n",
@@ -214,6 +213,101 @@
    "source": [
     "## Cleaning the data\n",
     "Now that we have loaded all of the data we need to clean the files in order to accurately compute data and make hypotheses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cleaning the Weather DataFrame\n",
+    "First we are going to clean the weather dataframe.\n",
+    "Converting the temperatures to farenheit and then deleting teh columns with more than 50 percent of teh values missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils\n",
+    "# Cleaning and Interpolating\n",
+    "weather_df.replace(\"\", np.NaN, inplace = True)\n",
+    "length_df = len(weather_df)\n",
+    "for value in weather_df:\n",
+    "    ser = weather_df[value].copy()\n",
+    "    for i in range(len(ser)):\n",
+    "        # if col is something you can interpolate\n",
+    "        if(value == \"tavg\", \"tmin\", \"tmax\", \"prcp\", \"wdir\", \"wspd\", \"pres\" and ser.isnull()):\n",
+    "            ser.interpolate(inplace = True)\n",
+    "    weather_df[value] = ser\n",
+    "    # removing columns with more than 50 percent of values missing\n",
+    "    count = weather_df[value].isnull().sum()\n",
+    "    if count > (length_df / 2):\n",
+    "        del weather_df[value]\n",
+    "\n",
+    "# # converting to imperial\n",
+    "# avg_temp_ser = weather_df[\"tavg\"].copy()\n",
+    "# min_temp_ser = weather_df[\"tmin\"].copy()\n",
+    "# max_temp_ser = weather_df[\"tmax\"].copy()\n",
+    "# for value in range(len(weather_df)):\n",
+    "#     avg_temp_ser[value] = utils.convert_temp(avg_temp_ser[value])\n",
+    "#     min_temp_ser[value] = utils.convert_temp(min_temp_ser[value])\n",
+    "#     max_temp_ser[value] = utils.convert_temp(max_temp_ser[value])\n",
+    "# weather_df[\"tavg\"] = avg_temp_ser\n",
+    "# weather_df[\"tmin\"] = min_temp_ser\n",
+    "# weather_df[\"tmax\"] = max_temp_ser\n",
+    "weather_df.to_csv(\"daily_weather.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cleaning the Date Column of the Netflix Dataframe\n",
+    "This will be converting the dates in this colunn from the format `4/9/22` to `2022-4-9`.\n",
+    "This will allow us the combine the other two data sets easily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       2022-04-09\n",
+      "1       2022-04-09\n",
+      "2       2022-04-08\n",
+      "3       2022-04-08\n",
+      "4       2022-04-05\n",
+      "           ...    \n",
+      "2468    2016-08-01\n",
+      "2469    2016-08-01\n",
+      "2470    2016-07-30\n",
+      "2471    2016-07-30\n",
+      "2472    2016-07-30\n",
+      "Name: Date, Length: 2473, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "netflix_df = pd.read_csv(\"NetflixViewingHistory_project.csv\")\n",
+    "date_ser = netflix_df[\"Date\"].copy()\n",
+    "for date in range(len(date_ser)):\n",
+    "    temp = date_ser[date].split(\"/\")\n",
+    "    year = \"20\" + temp[2]\n",
+    "    month = temp[0]\n",
+    "    if(len(temp[0]) == 1):\n",
+    "        month = \"0\" + month\n",
+    "    day = temp[1]\n",
+    "    if(len(temp[1]) == 1):\n",
+    "        day = \"0\" + day\n",
+    "    date_ser[date] = year + \"-\" + month + \"-\" + day\n",
+    "netflix_df[\"Date\"] = date_ser\n",
+    "netflix_df.to_csv(\"NetflixViewingHistory_project.csv\")\n"
    ]
   }
  ],
