--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,13 +265,13 @@
    "metadata": {},
    "source": [
     "#### Cleaning the Date Column of the Netflix Dataframe\n",
-    "This will be converting the dates in this colunn from the format `4/9/22` to `2022-4-9`.\n",
+    "This will be converting the dates in this colunn from the format `4/9/22` to `2022-04-09`.\n",
     "This will allow us the combine the other two data sets easily."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,9 @@
    ],
    "source": [
     "netflix_df = pd.read_csv(\"NetflixViewingHistory_project.csv\")\n",
+    "\n",
     "date_ser = netflix_df[\"Date\"].copy()\n",
+    "\n",
     "for date in range(len(date_ser)):\n",
     "    temp = date_ser[date].split(\"/\")\n",
     "    year = \"20\" + temp[2]\n",
@@ -307,7 +309,7 @@
     "        day = \"0\" + day\n",
     "    date_ser[date] = year + \"-\" + month + \"-\" + day\n",
     "netflix_df[\"Date\"] = date_ser\n",
-    "netflix_df.to_csv(\"NetflixViewingHistory_project.csv\")\n"
+    "print(netflix_df[\"Date\"])"
    ]
   }
  ],
