--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -123,28 +123,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            tavg  tmin  tmax  prcp  snow   wdir  wspd  wpgt    pres  tsun\n",
-      "date                                                                     \n",
-      "2016-07-30  19.8  15.6  25.0   0.0  None    NaN  11.2  None  1014.1  None\n",
-      "2016-07-31  18.4  14.4  22.8   0.0  None    NaN   9.1  None     NaN  None\n",
-      "2016-08-01  18.0  12.8  25.0   0.0  None    NaN   6.9  None  1018.2  None\n",
-      "2016-08-02  17.6  15.0  21.7   NaN  None    NaN   NaN  None     NaN  None\n",
-      "2016-08-03  19.2  15.6  23.9   0.0  None    NaN   NaN  None  1024.2  None\n",
-      "...          ...   ...   ...   ...   ...    ...   ...   ...     ...   ...\n",
-      "2022-04-05   7.6   4.0  12.0   0.8  None  172.0  14.7  None  1025.3  None\n",
-      "2022-04-06   8.8   2.0  16.0   0.0  None    6.0   9.7  None  1030.7  None\n",
-      "2022-04-07  14.3   7.0  22.0   0.0  None  354.0   7.7  None  1021.4  None\n",
-      "2022-04-08  10.1   7.0  15.0  10.2  None  194.0  18.2  None  1022.6  None\n",
-      "2022-04-09   5.9   3.5   9.0   5.3  None  150.0  10.8  None  1025.0  None\n",
+      "            date  tavg  tmin  tmax  prcp  snow   wdir  wspd  wpgt    pres  \\\n",
+      "0     2016-07-30  19.8  15.6  25.0   0.0  None    NaN  11.2  None  1014.1   \n",
+      "1     2016-07-31  18.4  14.4  22.8   0.0  None    NaN   9.1  None     NaN   \n",
+      "2     2016-08-01  18.0  12.8  25.0   0.0  None    NaN   6.9  None  1018.2   \n",
+      "3     2016-08-02  17.6  15.0  21.7   NaN  None    NaN   NaN  None     NaN   \n",
+      "4     2016-08-03  19.2  15.6  23.9   0.0  None    NaN   NaN  None  1024.2   \n",
+      "...          ...   ...   ...   ...   ...   ...    ...   ...   ...     ...   \n",
+      "2075  2022-04-05   7.6   4.0  12.0   0.8  None  172.0  14.7  None  1025.3   \n",
+      "2076  2022-04-06   8.8   2.0  16.0   0.0  None    6.0   9.7  None  1030.7   \n",
+      "2077  2022-04-07  14.3   7.0  22.0   0.0  None  354.0   7.7  None  1021.4   \n",
+      "2078  2022-04-08  10.1   7.0  15.0  10.2  None  194.0  18.2  None  1022.6   \n",
+      "2079  2022-04-09   5.9   3.5   9.0   5.3  None  150.0  10.8  None  1025.0   \n",
       "\n",
-      "[2080 rows x 10 columns]\n"
+      "      tsun  \n",
+      "0     None  \n",
+      "1     None  \n",
+      "2     None  \n",
+      "3     None  \n",
+      "4     None  \n",
+      "...    ...  \n",
+      "2075  None  \n",
+      "2076  None  \n",
+      "2077  None  \n",
+      "2078  None  \n",
+      "2079  None  \n",
+      "\n",
+      "[2080 rows x 11 columns]\n"
      ]
     }
    ],
@@ -156,7 +168,7 @@
     "json_weather_str = request_weather.text\n",
     "json_weather_obj = json.loads(json_weather_str)\n",
     "weather_df = pd.DataFrame(json_weather_obj[\"data\"])\n",
-    "weather_df.set_index(\"date\", inplace = True)\n",
+    "# weather_df.set_index(\"date\", inplace = True)\n",
     "weather_df.to_csv(\"daily_weather.csv\")\n",
     "print(weather_df)\n"
    ]
@@ -172,28 +184,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Day of Week\n",
-      "Date                  \n",
-      "2016-07-30    Saturday\n",
-      "2016-07-31      Sunday\n",
-      "2016-08-01      Monday\n",
-      "2016-08-02     Tuesday\n",
-      "2016-08-03   Wednesday\n",
-      "...                ...\n",
-      "2022-04-05     Tuesday\n",
-      "2022-04-06   Wednesday\n",
-      "2022-04-07    Thursday\n",
-      "2022-04-08      Friday\n",
-      "2022-04-09    Saturday\n",
+      "           Date Day of Week\n",
+      "0    2016-07-30    Saturday\n",
+      "1    2016-07-31      Sunday\n",
+      "2    2016-08-01      Monday\n",
+      "3    2016-08-02     Tuesday\n",
+      "4    2016-08-03   Wednesday\n",
+      "...         ...         ...\n",
+      "2075 2022-04-05     Tuesday\n",
+      "2076 2022-04-06   Wednesday\n",
+      "2077 2022-04-07    Thursday\n",
+      "2078 2022-04-08      Friday\n",
+      "2079 2022-04-09    Saturday\n",
       "\n",
-      "[2080 rows x 1 columns]\n"
+      "[2080 rows x 2 columns]\n",
+      "<class 'pandas._libs.tslibs.timestamps.Timestamp'>\n"
      ]
     }
    ],
@@ -202,9 +214,10 @@
     "date_df = pd.DataFrame()\n",
     "date_df[\"Date\"] = pd.Series(pd.date_range('2016-7-30', '2022-4-9', freq='D'))\n",
     "date_df[\"Day of Week\"] = date_df['Date'].dt.day_name()\n",
-    "date_df.set_index(\"Date\", inplace = True)\n",
+    "# date_df.set_index(\"Date\", inplace = True)\n",
     "date_df.to_csv(\"Days_of_The_Week.csv\")\n",
-    "print(date_df)"
+    "print(date_df)\n",
+    "print(type(date_df[\"Date\"][1]))"
    ]
   },
   {
@@ -271,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +302,8 @@
       "2470    2016-07-30\n",
       "2471    2016-07-30\n",
       "2472    2016-07-30\n",
-      "Name: Date, Length: 2473, dtype: object\n"
+      "Name: Date, Length: 2473, dtype: object\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -309,6 +323,7 @@
     "        day = \"0\" + day\n",
     "    date_ser[date] = year + \"-\" + month + \"-\" + day\n",
     "netflix_df[\"Date\"] = date_ser\n",
+    "\n",
     "print(netflix_df[\"Date\"])"
    ]
   }
