fix dates in day of week

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -214,10 +214,17 @@
     "date_df = pd.DataFrame()\n",
     "date_df[\"Date\"] = pd.Series(pd.date_range('2016-7-30', '2022-4-9', freq='D'))\n",
     "date_df[\"Day of Week\"] = date_df['Date'].dt.day_name()\n",
+    "# change to string so I can compare easily\n",
+    "change_ser = date_df[\"Date\"].copy()\n",
+    "\n",
+    "for value in range(len(change_ser)):\n",
+    "    temp = str(change_ser[value]).split(\" \")\n",
+    "    string = temp[0]\n",
+    "    change_ser[value] = string\n",
+    "date_df[\"Date\"] = change_ser\n",
     "# date_df.set_index(\"Date\", inplace = True)\n",
     "date_df.to_csv(\"Days_of_The_Week.csv\")\n",
-    "print(date_df)\n",
-    "print(type(date_df[\"Date\"][1]))"
+    "print(date_df)"
    ]
   },
   {
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -302,8 +309,7 @@
       "2470    2016-07-30\n",
       "2471    2016-07-30\n",
       "2472    2016-07-30\n",
-      "Name: Date, Length: 2473, dtype: object\n",
-      "<class 'str'>\n"
+      "Name: Date, Length: 2473, dtype: object\n"
      ]
     }
    ],
