index change in days of week

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -184,28 +184,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Date Day of Week\n",
-      "0    2016-07-30    Saturday\n",
-      "1    2016-07-31      Sunday\n",
-      "2    2016-08-01      Monday\n",
-      "3    2016-08-02     Tuesday\n",
-      "4    2016-08-03   Wednesday\n",
-      "...         ...         ...\n",
-      "2075 2022-04-05     Tuesday\n",
-      "2076 2022-04-06   Wednesday\n",
-      "2077 2022-04-07    Thursday\n",
-      "2078 2022-04-08      Friday\n",
-      "2079 2022-04-09    Saturday\n",
+      "           Day of Week\n",
+      "Date                  \n",
+      "2016-07-30    Saturday\n",
+      "2016-07-31      Sunday\n",
+      "2016-08-01      Monday\n",
+      "2016-08-02     Tuesday\n",
+      "2016-08-03   Wednesday\n",
+      "...                ...\n",
+      "2022-04-05     Tuesday\n",
+      "2022-04-06   Wednesday\n",
+      "2022-04-07    Thursday\n",
+      "2022-04-08      Friday\n",
+      "2022-04-09    Saturday\n",
       "\n",
-      "[2080 rows x 2 columns]\n",
-      "<class 'pandas._libs.tslibs.timestamps.Timestamp'>\n"
+      "[2080 rows x 1 columns]\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
     "    string = temp[0]\n",
     "    change_ser[value] = string\n",
     "date_df[\"Date\"] = change_ser\n",
-    "# date_df.set_index(\"Date\", inplace = True)\n",
+    "date_df.set_index(\"Date\", inplace = True)\n",
     "date_df.to_csv(\"Days_of_The_Week.csv\")\n",
     "print(date_df)"
    ]
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
