--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
       "2076  2022-04-06   8.8   2.0  16.0   0.0  None    6.0   9.7  None  1030.7   \n",
       "2077  2022-04-07  14.3   7.0  22.0   0.0  None  354.0   7.7  None  1021.4   \n",
       "2078  2022-04-08  10.1   7.0  15.0  10.2  None  194.0  18.2  None  1022.6   \n",
-      "2079  2022-04-09   5.9   3.5   9.0   5.3  None  150.0  10.8  None  1025.0   \n",
+      "2079  2022-04-09   6.4   3.0   9.0   6.4  None  159.0  12.1  None  1024.6   \n",
       "\n",
       "      tsun  \n",
       "0     None  \n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
     "# weather_df[\"tavg\"] = avg_temp_ser\n",
     "# weather_df[\"tmin\"] = min_temp_ser\n",
     "# weather_df[\"tmax\"] = max_temp_ser\n",
-    "weather_df.to_csv(\"daily_weather.csv\")\n"
+    "weather_df.to_csv(\"cleaned_daily_weather.csv\")\n"
    ]
   },
   {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
     "        day = \"0\" + day\n",
     "    date_ser[date] = year + \"-\" + month + \"-\" + day\n",
     "netflix_df[\"Date\"] = date_ser\n",
-    "\n",
+    "netflix_df.to_csv(\"cleaned_Netflix_Viewing_History.csv\")\n",
     "print(netflix_df[\"Date\"])"
    ]
   }
