--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -192,20 +192,21 @@
      "output_type": "stream",
      "text": [
       "<class 'str'>\n",
-      "            Date Day of Week\n",
-      "0     2016-07-30    Saturday\n",
-      "1     2016-07-31      Sunday\n",
-      "2     2016-08-01      Monday\n",
-      "3     2016-08-02     Tuesday\n",
-      "4     2016-08-03   Wednesday\n",
-      "...          ...         ...\n",
-      "2075  2022-04-05     Tuesday\n",
-      "2076  2022-04-06   Wednesday\n",
-      "2077  2022-04-07    Thursday\n",
-      "2078  2022-04-08      Friday\n",
-      "2079  2022-04-09    Saturday\n",
+      "           Day of Week\n",
+      "Date                  \n",
+      "2016-07-30    Saturday\n",
+      "2016-07-31      Sunday\n",
+      "2016-08-01      Monday\n",
+      "2016-08-02     Tuesday\n",
+      "2016-08-03   Wednesday\n",
+      "...                ...\n",
+      "2022-04-05     Tuesday\n",
+      "2022-04-06   Wednesday\n",
+      "2022-04-07    Thursday\n",
+      "2022-04-08      Friday\n",
+      "2022-04-09    Saturday\n",
       "\n",
-      "[2080 rows x 2 columns]\n"
+      "[2080 rows x 1 columns]\n"
      ]
     }
    ],
@@ -225,9 +226,9 @@
     "date_df[\"Date\"] = change_ser\n",
     "\n",
     "print(type(date_df[\"Date\"][1]))\n",
-    "print(date_df)\n",
     "date_df.set_index(\"Date\", inplace = True)\n",
-    "date_df.to_csv(\"Days_of_The_Week.csv\")"
+    "date_df.to_csv(\"Days_of_The_Week.csv\")\n",
+    "print(date_df)"
    ]
   },
   {
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -403,8 +404,56 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['2016-07-30', '2016-07-31', '2016-08-01', '2016-08-02', '2016-08-03',\n",
+      "       '2016-08-04', '2016-08-05', '2016-08-06', '2016-08-07', '2016-08-08',\n",
+      "       ...\n",
+      "       '2022-03-31', '2022-04-01', '2022-04-02', '2022-04-03', '2022-04-04',\n",
+      "       '2022-04-05', '2022-04-06', '2022-04-07', '2022-04-08', '2022-04-09'],\n",
+      "      dtype='object', name='Date', length=2080)\n",
+      "0       2022-04-09\n",
+      "1       2022-04-09\n",
+      "2       2022-04-08\n",
+      "3       2022-04-08\n",
+      "4       2022-04-05\n",
+      "           ...    \n",
+      "2468    2016-08-01\n",
+      "2469    2016-08-01\n",
+      "2470    2016-07-30\n",
+      "2471    2016-07-30\n",
+      "2472    2016-07-30\n",
+      "Name: Date, Length: 2473, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Counting The Frequency of things watched per day"
+    "freq_list = [0] * len(merged_weather_dayWeek_df)\n",
+    "freq_watched_ser = pd.Series(freq_list)\n",
+    "\n",
+    "freq_df = pd.DataFrame(columns = [\"Date\", \"Things Watched\"])\n",
+    "freq_df[\"Things Watched\"] = freq_watched_ser\n",
+    "freq_df[\"Date\"] = date_df.index\n",
+    "freq_df[\"Things Watched\"] = freq_watched_ser\n",
+    "freq_df.set_index(\"Date\", inplace = True)\n",
+    "# print(freq_df)\n",
+    "freq_df.index = freq_df.index.astype(str)\n",
+    "# print(type(freq_df.index[1]))\n",
+    "# for date in netflix_df[\"Date\"]:\n",
+    "#     freq_df[date][\"Things Watched\"] += 1\n",
+    "\n",
+    "print(freq_df.index)\n",
+    "print(netflix_df[\"Date\"])\n",
+    "\n"
    ]
   }
  ],
