cant get counting frequency to work

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -408,31 +408,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['2016-07-30', '2016-07-31', '2016-08-01', '2016-08-02', '2016-08-03',\n",
-      "       '2016-08-04', '2016-08-05', '2016-08-06', '2016-08-07', '2016-08-08',\n",
-      "       ...\n",
-      "       '2022-03-31', '2022-04-01', '2022-04-02', '2022-04-03', '2022-04-04',\n",
-      "       '2022-04-05', '2022-04-06', '2022-04-07', '2022-04-08', '2022-04-09'],\n",
-      "      dtype='object', name='Date', length=2080)\n",
-      "0       2022-04-09\n",
-      "1       2022-04-09\n",
-      "2       2022-04-08\n",
-      "3       2022-04-08\n",
-      "4       2022-04-05\n",
-      "           ...    \n",
-      "2468    2016-08-01\n",
-      "2469    2016-08-01\n",
-      "2470    2016-07-30\n",
-      "2471    2016-07-30\n",
-      "2472    2016-07-30\n",
-      "Name: Date, Length: 2473, dtype: object\n"
+      "            Things Watched\n",
+      "Date                      \n",
+      "2016-07-30               0\n",
+      "2016-07-31               0\n",
+      "2016-08-01               0\n",
+      "2016-08-02               0\n",
+      "2016-08-03               0\n",
+      "...                    ...\n",
+      "2022-04-05               0\n",
+      "2022-04-06               0\n",
+      "2022-04-07               0\n",
+      "2022-04-08               0\n",
+      "2022-04-09               0\n",
+      "\n",
+      "[2080 rows x 1 columns]\n"
      ]
     }
    ],
@@ -445,14 +442,21 @@
     "freq_df[\"Date\"] = date_df.index\n",
     "freq_df[\"Things Watched\"] = freq_watched_ser\n",
     "freq_df.set_index(\"Date\", inplace = True)\n",
-    "# print(freq_df)\n",
-    "freq_df.index = freq_df.index.astype(str)\n",
+    "print(freq_df)\n",
     "# print(type(freq_df.index[1]))\n",
-    "# for date in netflix_df[\"Date\"]:\n",
-    "#     freq_df[date][\"Things Watched\"] += 1\n",
-    "\n",
-    "print(freq_df.index)\n",
-    "print(netflix_df[\"Date\"])\n",
+    "# print(type(netflix_df[\"Date\"][1]))\n",
+    "# print(netflix_df[\"Date\"][1])\n",
+    "# print(freq_df.index[len(freq_df) - 1])\n",
+    "# if(freq_df.index[len(freq_df) - 1] == netflix_df[\"Date\"][1]):\n",
+    "#     print(\"WHY DOESNT THIS WORK\")\n",
+    "# print(freq_df)\n",
+    "# freq_df.index = freq_df.index.astype(str)\n",
+    "# for index in range(len(freq_df.index)):\n",
+    "#     for date in range(len(netflix_df[\"Date\"])):\n",
+    "#         if(freq_df.index[index] == netflix_df[\"Date\"][date]):\n",
+    "#             freq_df[freq_df.index[index]][\"Things Watched\"]+= 1\n",
+    "# print(freq_df)\n",
+    "    \n",
     "\n"
    ]
   }
