cant get count to work

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -404,32 +404,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Counting the number of things watched per day"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Things Watched\n",
-      "Date                      \n",
-      "2016-07-30               0\n",
-      "2016-07-31               0\n",
-      "2016-08-01               0\n",
-      "2016-08-02               0\n",
-      "2016-08-03               0\n",
-      "...                    ...\n",
-      "2022-04-05               0\n",
-      "2022-04-06               0\n",
-      "2022-04-07               0\n",
-      "2022-04-08               0\n",
-      "2022-04-09               0\n",
-      "\n",
-      "[2080 rows x 1 columns]\n"
+      "freq = 2016-07-30\n",
+      "netflix = 2016-07-30\n",
+      "The index freq and the instance in the date list are the same\n",
+      "Now putting the netflix date into the freq df as a key shoulnt have an error\n"
      ]
     }
    ],
@@ -439,23 +430,24 @@
     "\n",
     "freq_df = pd.DataFrame(columns = [\"Date\", \"Things Watched\"])\n",
     "freq_df[\"Things Watched\"] = freq_watched_ser\n",
-    "freq_df[\"Date\"] = date_df.index\n",
-    "freq_df[\"Things Watched\"] = freq_watched_ser\n",
+    "freq_df[\"Date\"] = merged_weather_dayWeek_df.index\n",
     "freq_df.set_index(\"Date\", inplace = True)\n",
-    "print(freq_df)\n",
-    "# print(type(freq_df.index[1]))\n",
-    "# print(type(netflix_df[\"Date\"][1]))\n",
-    "# print(netflix_df[\"Date\"][1])\n",
-    "# print(freq_df.index[len(freq_df) - 1])\n",
-    "# if(freq_df.index[len(freq_df) - 1] == netflix_df[\"Date\"][1]):\n",
-    "#     print(\"WHY DOESNT THIS WORK\")\n",
     "# print(freq_df)\n",
-    "# freq_df.index = freq_df.index.astype(str)\n",
-    "# for index in range(len(freq_df.index)):\n",
-    "#     for date in range(len(netflix_df[\"Date\"])):\n",
-    "#         if(freq_df.index[index] == netflix_df[\"Date\"][date]):\n",
-    "#             freq_df[freq_df.index[index]][\"Things Watched\"]+= 1\n",
-    "# print(freq_df)\n",
+    "# print(freq_df.index)\n",
+    "print(\"freq =\", freq_df.index[0])\n",
+    "print(\"netflix =\", netflix_df[\"Date\"][len(netflix_df) - 1])\n",
+    "if(netflix_df[\"Date\"][len(netflix_df) - 1] == freq_df.index[0]):\n",
+    "    print(\"The index freq and the instance in the date list are the same\")\n",
+    "print(\"Now putting the netflix date into the freq df as a key shoulnt have an error\")\n",
+    "\n",
+    "\n",
+    "# for some reason this doesnt work\n",
+    "    # print(freq_df[netflix_df[\"Date\"][len(netflix_df) - 1]][\"Things Watched\"])\n",
+    "    # for date in netflix_df[\"Date\"]:\n",
+    "        # freq_df[date][\"Things Watched\"] += 1\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n",
     "\n"
    ]
