counted things watched

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -184,9 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\georg\\AppData\\Local\\Temp/ipykernel_28128/3870878699.py:6: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  change_ser = pd.Series(list())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -217,7 +225,7 @@
     "date_df[\"Day of Week\"] = date_df['Date'].dt.day_name()\n",
     "# change to string so I can compare easily\n",
     "\n",
-    "change_ser = pd.Series(list(string))\n",
+    "change_ser = pd.Series(list())\n",
     "\n",
     "for value in range(len(date_df[\"Date\"])):\n",
     "    temp = str(date_df[\"Date\"][value]).split(\" \")\n",
@@ -250,27 +258,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Date  tavg  tmin  tmax  prcp   wdir       wspd     pres\n",
-      "0     2016-07-30  19.8  15.6  25.0   0.0    NaN  11.200000  1014.10\n",
-      "1     2016-07-31  18.4  14.4  22.8   0.0    NaN   9.100000  1016.15\n",
-      "2     2016-08-01  18.0  12.8  25.0   0.0    NaN   6.900000  1018.20\n",
-      "3     2016-08-02  17.6  15.0  21.7   0.0    NaN   8.566667  1021.20\n",
-      "4     2016-08-03  19.2  15.6  23.9   0.0    NaN  10.233333  1024.20\n",
-      "...          ...   ...   ...   ...   ...    ...        ...      ...\n",
-      "2075  2022-04-05   7.6   4.0  12.0   0.8  172.0  14.700000  1025.30\n",
-      "2076  2022-04-06   8.8   2.0  16.0   0.0    6.0   9.700000  1030.70\n",
-      "2077  2022-04-07  14.3   7.0  22.0   0.0  354.0   7.700000  1021.40\n",
-      "2078  2022-04-08  10.1   7.0  15.0  10.2  194.0  18.200000  1022.60\n",
-      "2079  2022-04-09   6.4   3.0   9.0   6.4  159.0  12.100000  1024.60\n",
+      "            tavg  tmin  tmax  prcp   wdir       wspd     pres\n",
+      "Date                                                         \n",
+      "2016-07-30  19.8  15.6  25.0   0.0    NaN  11.200000  1014.10\n",
+      "2016-07-31  18.4  14.4  22.8   0.0    NaN   9.100000  1016.15\n",
+      "2016-08-01  18.0  12.8  25.0   0.0    NaN   6.900000  1018.20\n",
+      "2016-08-02  17.6  15.0  21.7   0.0    NaN   8.566667  1021.20\n",
+      "2016-08-03  19.2  15.6  23.9   0.0    NaN  10.233333  1024.20\n",
+      "...          ...   ...   ...   ...    ...        ...      ...\n",
+      "2022-04-05   7.6   4.0  12.0   0.8  172.0  14.700000  1025.30\n",
+      "2022-04-06   8.8   2.0  16.0   0.0    6.0   9.700000  1030.70\n",
+      "2022-04-07  14.3   7.0  22.0   0.0  354.0   7.700000  1021.40\n",
+      "2022-04-08  10.1   7.0  15.0  10.2  194.0  18.200000  1022.60\n",
+      "2022-04-09   6.4   3.0   9.0   6.4  159.0  12.100000  1024.60\n",
       "\n",
-      "[2080 rows x 8 columns]\n"
+      "[2080 rows x 7 columns]\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -303,8 +313,11 @@
     "# weather_df[\"tmin\"] = min_temp_ser\n",
     "# weather_df[\"tmax\"] = max_temp_ser\n",
     "weather_df = weather_df.rename({\"date\": \"Date\"}, axis = \"columns\")\n",
-    "print(weather_df)\n",
+    "\n",
     "weather_df.set_index(\"Date\", inplace=True)\n",
+    "print(weather_df)\n",
+    "\n",
+    "print(type(weather_df.index[0]))\n",
     "weather_df.to_csv(\"cleaned_daily_weather.csv\")\n"
    ]
   },
@@ -319,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +368,8 @@
     "    day = temp[1]\n",
     "    if(len(temp[1]) == 1):\n",
     "        day = \"0\" + day\n",
-    "    date_ser[date] = year + \"-\" + month + \"-\" + day\n",
+    "    final = year + \"-\" + month + \"-\" + day\n",
+    "    date_ser[date] = final.strip()\n",
     "netflix_df[\"Date\"] = date_ser\n",
     "netflix_df.to_csv(\"cleaned_Netflix_Viewing_History.csv\")\n",
     "print(netflix_df[\"Date\"])"
@@ -371,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -410,45 +424,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "freq = 2016-07-30\n",
-      "netflix = 2016-07-30\n",
-      "The index freq and the instance in the date list are the same\n",
-      "Now putting the netflix date into the freq df as a key shoulnt have an error\n"
+      "            Things Watched\n",
+      "Date                      \n",
+      "2016-07-30               3\n",
+      "2016-08-01               6\n",
+      "2016-08-02               7\n",
+      "2016-08-03               7\n",
+      "2016-08-04              17\n",
+      "...                    ...\n",
+      "2022-04-01               2\n",
+      "2022-04-04               3\n",
+      "2022-04-05               1\n",
+      "2022-04-08               2\n",
+      "2022-04-09               2\n",
+      "\n",
+      "[822 rows x 1 columns]\n"
      ]
     }
    ],
    "source": [
-    "freq_list = [0] * len(merged_weather_dayWeek_df)\n",
-    "freq_watched_ser = pd.Series(freq_list)\n",
+    "watched_dates_list = list()\n",
+    "freq_list = list()\n",
+    "used_dates_list = list()\n",
+    "watched_dates_df = pd.DataFrame(columns = [\"Date\", \"Things Watched\"])\n",
+    "for date in netflix_df[\"Date\"]:\n",
+    "    if date not in used_dates_list:\n",
+    "        used_dates_list.append(date)\n",
+    "        temp_df = netflix_df.loc[netflix_df[\"Date\"] == date]\n",
+    "        watched_dates_list.append(date)\n",
+    "        freq_list.append(len(temp_df))\n",
+    "freq_list.reverse()\n",
+    "watched_dates_list.reverse()\n",
+    "watched_dates_df[\"Date\"] = watched_dates_list\n",
+    "watched_dates_df[\"Things Watched\"] = freq_list\n",
+    "watched_dates_df.set_index(\"Date\", inplace = True)\n",
+    "print(watched_dates_df)\n",
+    "watched_dates_df.to_csv(\"Netflix_Frequency.csv\")\n",
     "\n",
-    "freq_df = pd.DataFrame(columns = [\"Date\", \"Things Watched\"])\n",
-    "freq_df[\"Things Watched\"] = freq_watched_ser\n",
-    "freq_df[\"Date\"] = merged_weather_dayWeek_df.index\n",
-    "freq_df.set_index(\"Date\", inplace = True)\n",
-    "# print(freq_df)\n",
-    "# print(freq_df.index)\n",
-    "print(\"freq =\", freq_df.index[0])\n",
-    "print(\"netflix =\", netflix_df[\"Date\"][len(netflix_df) - 1])\n",
-    "if(netflix_df[\"Date\"][len(netflix_df) - 1] == freq_df.index[0]):\n",
-    "    print(\"The index freq and the instance in the date list are the same\")\n",
-    "print(\"Now putting the netflix date into the freq df as a key shoulnt have an error\")\n",
-    "\n",
-    "\n",
-    "# for some reason this doesnt work\n",
-    "    # print(freq_df[netflix_df[\"Date\"][len(netflix_df) - 1]][\"Things Watched\"])\n",
-    "    # for date in netflix_df[\"Date\"]:\n",
-    "        # freq_df[date][\"Things Watched\"] += 1\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
     "\n"
    ]
   }
