--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\georg\\AppData\\Local\\Temp/ipykernel_28128/3870878699.py:6: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "C:\\Users\\georg\\AppData\\Local\\Temp/ipykernel_15496/3870878699.py:6: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
       "  change_ser = pd.Series(list())\n"
      ]
     },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,33 +419,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Counting the number of things watched per day"
+    "#### Counting the number of things watched per day\n",
+    "After counting the amount of things watched for each day we can then merge it with the previously merged data to see all the data combined to one dataframe. This will also make analyzing this data much easier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Things Watched\n",
-      "Date                      \n",
-      "2016-07-30               3\n",
-      "2016-08-01               6\n",
-      "2016-08-02               7\n",
-      "2016-08-03               7\n",
-      "2016-08-04              17\n",
-      "...                    ...\n",
-      "2022-04-01               2\n",
-      "2022-04-04               3\n",
-      "2022-04-05               1\n",
-      "2022-04-08               2\n",
-      "2022-04-09               2\n",
+      "            tavg  tmin  tmax  prcp   wdir       wspd     pres Day of Week  \\\n",
+      "Date                                                                        \n",
+      "2016-07-30  19.8  15.6  25.0   0.0    NaN  11.200000  1014.10    Saturday   \n",
+      "2016-07-31  18.4  14.4  22.8   0.0    NaN   9.100000  1016.15      Sunday   \n",
+      "2016-08-01  18.0  12.8  25.0   0.0    NaN   6.900000  1018.20      Monday   \n",
+      "2016-08-02  17.6  15.0  21.7   0.0    NaN   8.566667  1021.20     Tuesday   \n",
+      "2016-08-03  19.2  15.6  23.9   0.0    NaN  10.233333  1024.20   Wednesday   \n",
+      "...          ...   ...   ...   ...    ...        ...      ...         ...   \n",
+      "2022-04-05   7.6   4.0  12.0   0.8  172.0  14.700000  1025.30     Tuesday   \n",
+      "2022-04-06   8.8   2.0  16.0   0.0    6.0   9.700000  1030.70   Wednesday   \n",
+      "2022-04-07  14.3   7.0  22.0   0.0  354.0   7.700000  1021.40    Thursday   \n",
+      "2022-04-08  10.1   7.0  15.0  10.2  194.0  18.200000  1022.60      Friday   \n",
+      "2022-04-09   6.4   3.0   9.0   6.4  159.0  12.100000  1024.60    Saturday   \n",
       "\n",
-      "[822 rows x 1 columns]\n"
+      "            Things Watched  \n",
+      "Date                        \n",
+      "2016-07-30             3.0  \n",
+      "2016-07-31             NaN  \n",
+      "2016-08-01             6.0  \n",
+      "2016-08-02             7.0  \n",
+      "2016-08-03             7.0  \n",
+      "...                    ...  \n",
+      "2022-04-05             1.0  \n",
+      "2022-04-06             NaN  \n",
+      "2022-04-07             NaN  \n",
+      "2022-04-08             2.0  \n",
+      "2022-04-09             2.0  \n",
+      "\n",
+      "[2080 rows x 9 columns]\n"
      ]
     }
    ],
@@ -465,10 +480,11 @@
     "watched_dates_df[\"Date\"] = watched_dates_list\n",
     "watched_dates_df[\"Things Watched\"] = freq_list\n",
     "watched_dates_df.set_index(\"Date\", inplace = True)\n",
-    "print(watched_dates_df)\n",
     "watched_dates_df.to_csv(\"Netflix_Frequency.csv\")\n",
     "\n",
-    "\n"
+    "fully_merged_df = merged_weather_dayWeek_df.merge(watched_dates_df, on = [\"Date\"], how= \"outer\")\n",
+    "print(fully_merged_df)\n",
+    "fully_merged_df.to_csv(\"Combined_Data.csv\")\n"
    ]
   }
  ],
